@@ -5,7 +5,9 @@ DIST 0002-block-introduce-the-BFQ-v6r2-I-O-sched-for-3.11.patch1 173829 SHA256 5
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-.patch1 35688 SHA256 e761c6b8a31a7d85492929335412ae57c1c29fa7b66f65448c828c8434aa8550 SHA512 c218e9073adb4acbe6155c5efae0c0267eedb5d636589773f52062b3554f15677f29346cdd253d28e60b784bd64fd1d5fd54091bd17449bfafd9b358ad1c5d6f WHIRLPOOL 55ed04ddd26ba531922bf11a06f58c7320bbd7b8c4f6aea70b2e1489ddfe61b0ae7faaa252f5e99cd87fa87a6323c62e32c2ed23d236da0632852df407a3345b
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-3.11.0.patch1 35687 SHA256 5dcbf25a92a597100a7990f4844224f6a711de2a0ca2aaa7d40cc06ea0ef2cc8 SHA512 c16f6541d44af10aa10d34f50bf5fd8bee998a3786cbe47e757d328cf921270b8ff4eb60367701d99b8d1354692e4bb159401dcbe0f3f3f48d29fcbf9568db85 WHIRLPOOL 53544791b3a2d6e80b7f298b89e5c8d7d831aa24580412bb222f6c4a6ada73ba2cc7149135d675e0c81b96d6f21f5b8187e4b9994faa08e32ad9f652d1d494ce
 DIST README-3.10.15.BFQ 10428 SHA256 413d875a3718421bb42c5b7bf32861ef2c4c72e2617666d75d4e25669c8945bf SHA512 af4796de260798f978b4a20473835ef28ef414f2da18cf0159b69ea76c3c23966b680e465d5ec5cccdf2bb08663cc8a3a5c643d060d64eebc97715114d5982a8 WHIRLPOOL df7c1e1bcbf7522a9e13985866a0063552d9dca638e6976d9fcd8d72ba6cc1c57c2b1accffb591c262a4a81abeee67c1a82d09e33cae6aebeb3035c62b2a48f2
+DIST README-3.10.16.BFQ 10428 SHA256 413d875a3718421bb42c5b7bf32861ef2c4c72e2617666d75d4e25669c8945bf SHA512 af4796de260798f978b4a20473835ef28ef414f2da18cf0159b69ea76c3c23966b680e465d5ec5cccdf2bb08663cc8a3a5c643d060d64eebc97715114d5982a8 WHIRLPOOL df7c1e1bcbf7522a9e13985866a0063552d9dca638e6976d9fcd8d72ba6cc1c57c2b1accffb591c262a4a81abeee67c1a82d09e33cae6aebeb3035c62b2a48f2
 DIST README-3.11.4.BFQ 10427 SHA256 fdab3c27c8d4e3abcfea008834483798e488af1cb9b7ec231d096717f48cdb2f SHA512 aeb95884b3c9c443313c12661f4a0ccd28be9ba77f6ed565799f2d816a5b2b1b9db4a92ddf3d8d2a22ae62092e544e23946b0e05990b88f5b7697d425ee84232 WHIRLPOOL aabc216e45e4443b28a515ceca64cf75584693fe5b877d216da64c1c94446d5d7f6979b27a14e1541c0c3b823d09506405ef711f3468239ec439a05dda597aad
+DIST README-3.11.5.BFQ 10427 SHA256 fdab3c27c8d4e3abcfea008834483798e488af1cb9b7ec231d096717f48cdb2f SHA512 aeb95884b3c9c443313c12661f4a0ccd28be9ba77f6ed565799f2d816a5b2b1b9db4a92ddf3d8d2a22ae62092e544e23946b0e05990b88f5b7697d425ee84232 WHIRLPOOL aabc216e45e4443b28a515ceca64cf75584693fe5b877d216da64c1c94446d5d7f6979b27a14e1541c0c3b823d09506405ef711f3468239ec439a05dda597aad
 DIST aufs-sources-3.10_p20131007.tar.xz 150600 SHA256 7f8866e1f602602d1214d959e60eb7739448901fdd000b492a1b52101253081a SHA512 1279d447f3f0efc57fb360217d42add4706e25f9f67f6ad93cf097869cf57d847a2fbaba3c983492de1cdd64b503d35e4866b4b31cb65c32e0ea80781e547d22 WHIRLPOOL 4b99254b4cf8d4c0ed950b0abe6f22581eb9e4f77af1ca472bd96515043cbbc4c2e328fc99f6768eae3b8126345a4809a14e65b8d0f2cababa3cd77a433bfc27
 DIST aufs-sources-3.11_p20131007.tar.xz 151108 SHA256 9687641c8b643cf316708b2b93ff8d0281d6816a65eb716a688f740537574694 SHA512 5c7866bfe0af3473659e2b714434f19805e9f3304eb149a24e6f9cf2d14d0acf879dcceb7f58e15189c7b8af406566779f2aac35a76715ea838e5d7ab7e9b4d0 WHIRLPOOL c818f2c7f0be68800a9a11423419f1d38ac7460c709d9ade00aa8daefb5d5d217ebfef8bf011ec2444f60ede76ec3d1281c8f7c9a3a98baadfd543a8623a71c4
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
@@ -14,8 +16,12 @@ DIST deblob-check-3.10 565672 SHA256 748df2cf5c1f012f9942948827e57b12bb05c569cae
 DIST deblob-check-3.11 589384 SHA256 6931c59ed9f03e2f11038997e430e9c04d51fe2d00dc6f8a134d92e1eba72fdb SHA512 315c50141967adb7952bc83a374f94d9b70a1027d6cd4a4b76d4fa4108ea7159cedb599e65ba531af1c1ef869e203aa1a03225e210cddd996120977d4886a25a WHIRLPOOL c079786436dc55773de9f5fc1bccd265049e58b74618fba534cd5964d881c107ecb705de68e3a7f02d1e285ebad9b2d7e985a4b6603fa3460b503c6db1ff1ad2
 DIST genpatches-3.10-22.base.tar.xz 288396 SHA256 ba650810da7a5e1b443aee2863d5bbabaefc17016f96da291c2b8923412f7005 SHA512 7211e85d6afdb83531c5edd18dd764877b0e073b392ef523025f4c83232c855b3ff00f4b2828b1b4dddf522d20d7913c15b57c7bf0a7ca3bb1e86851561aff83 WHIRLPOOL 9ea10e956a1a5b287066146176d671d8f4d1423866c0da6fff8e1c2bf58962154ebc737b096c9f85681765eba27fa853bb60c9117ed20d3603c560e9ed96b145
 DIST genpatches-3.10-22.extras.tar.xz 17752 SHA256 0cee08fb7ebb857d78741b833190d3829e974231de177918f89cbf32e194252b SHA512 0fab063d4d69f3ad824cf573f4da839d635f1f473af928c85544df60bb62e9cd29ca67f95110689299e79bc9f5b35455436c53fbc732569170b5decf17f74e97 WHIRLPOOL 9a73aa0e84690820832791b63749e01f4d622cf1f0327ae33a6188b866ba1459f6f6b3a01d31412fa3cc226da8af6ab63ee59db29cdfb787cd24901c85b84233
+DIST genpatches-3.10-23.base.tar.xz 317860 SHA256 a553492f9a8f6c720c8f2d0c446ce50026c317cad5ed18a8fbf55e083501f029 SHA512 a834bd8a6cac64bb0e007d3b3606120ba8b5c0265540435f024bedc095fc44948cf42795e43d2befa67579b6b0f2e56b73290a8a420d3d7b0afcc176a92321ee WHIRLPOOL 15c09cbc4fec9bac5e248421807ef8b07089cbfd6df473687d56201d234ac873b342a982c33114fb5dbc78224e70699fb005ef049704b1ab28889b3681ef0117
+DIST genpatches-3.10-23.extras.tar.xz 17752 SHA256 0cee08fb7ebb857d78741b833190d3829e974231de177918f89cbf32e194252b SHA512 0fab063d4d69f3ad824cf573f4da839d635f1f473af928c85544df60bb62e9cd29ca67f95110689299e79bc9f5b35455436c53fbc732569170b5decf17f74e97 WHIRLPOOL 9a73aa0e84690820832791b63749e01f4d622cf1f0327ae33a6188b866ba1459f6f6b3a01d31412fa3cc226da8af6ab63ee59db29cdfb787cd24901c85b84233
 DIST genpatches-3.11-7.base.tar.xz 90012 SHA256 66cae2075df22a7fcee117f262ac9fb9e5c20f2418530264d87f7d9ab2c5b89c SHA512 fd74baf144b581fed51c6e014515d87613f2fb9a95fb210e1482e3334bda41837da7a0e553d571c73866bffcba7e27cd4234962e1e76963124d9030821a7b794 WHIRLPOOL b63fe7f02bb5198f7c300190b83a464222506d74aff27d2211092df56adb9fdb06278414696dfc4dd7780695840ffa29e9a61fa9f090e93a958bb52fc3ad28db
 DIST genpatches-3.11-7.extras.tar.xz 16644 SHA256 7039fea3cac3eb3a9e7468d0db479d1f4e8ab0a08779cdcc9bae5db06cb6f0e1 SHA512 f9b80a5e07a5dc7201aa2d5d92140a885564fed880d6167400830fc9c0d1bf667a1c549c3f06d446254c504d62ccea36332da49cc2ca47d343c61e35e85523fa WHIRLPOOL fd42b19839128515f63771977702a522b46751b6ead85ace649a816106f24c547596c8c269732c83fc3385bc5d24a93d8d79cb4b3664f108be4b4327af216013
+DIST genpatches-3.11-8.base.tar.xz 130740 SHA256 1bbff3c466c261e4fb8bae4ca1f407f0b57653e90e7d49b77aa18b28f3148bd3 SHA512 3f8212caf9443ff210f8c0df2f5f8d45ac461c41bed8aaae9ae05a1eb7474f83ef092ff27bcb4a078d620e5d65989797020ecef85d0461ae63d533eb96fbee37 WHIRLPOOL 95501e77d34333821a56809ced7600db96013f1b89300719fcea6e4ab7afdf18da275cfd031b5ba3c26ea4751038461e952a8af544f33904527d627a0e3bb2e0
+DIST genpatches-3.11-8.extras.tar.xz 16644 SHA256 7039fea3cac3eb3a9e7468d0db479d1f4e8ab0a08779cdcc9bae5db06cb6f0e1 SHA512 f9b80a5e07a5dc7201aa2d5d92140a885564fed880d6167400830fc9c0d1bf667a1c549c3f06d446254c504d62ccea36332da49cc2ca47d343c61e35e85523fa WHIRLPOOL fd42b19839128515f63771977702a522b46751b6ead85ace649a816106f24c547596c8c269732c83fc3385bc5d24a93d8d79cb4b3664f108be4b4327af216013
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST lh-sources-kernel-310-gcc48-2.patch 14066 SHA256 ac1e5840e14e8601a79b8070b875e3f98cad532436637d5fa2022bdd3d442eae SHA512 4371d9958086235af64a013b21c1fe425ce4ad184fcba1499e979243e6c523a8ab80c59efd4f834173395b06696361e0471573fb768e7d384efcf7a628b36839 WHIRLPOOL 9b10834d36037ed1a511ad4be864a59b3d3fd0d190aa5d9b64873edb7d545e8cb21aa866ea5af0dc2120ae54d5c507fcb7a1d1e19fb960a9e1990f4da74f548f
 DIST lh-sources-kernel-311-gcc48-1.patch 14066 SHA256 30e84e6f86bfb3d901355ee6329d8dac2193671139da7e504ee782d50265a292 SHA512 7d4f80c3905bbab33736317b0b1c0771228659b3ef1cb476715c85ae42bede011e83cb825c66b87e3b92788432a9d31a85fd8438428299dd195262083e9bc68f WHIRLPOOL fbad5fa34dc3daebe32a3fcba51c6f21275bacbdc485ae785b07e11608431d8d5d88f18e6f4e03b6d8c73a998d29f54875e8402b1dba450e36cebbd3f4734f9a
